# fuel-noop-fixtures

./: .gitignore  .gitreview  Gemfile  README.md  demo.rb  noop_tests.rb  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
astute.yaml/: neut_vlan.cinder-block-device.compute.yaml  novanet_vlan.compute-vmware-role.yaml  novanet_vlan.primary-controller.vcenter.yaml
doc/: Makefile  conf.py  fixtures.rst  helpers.rst  index.rst  make.bat  structure.rst  usage.rst  utility.rst
facts/: centos6.yaml  centos7.yaml  master_centos6.yaml  master_centos7.yaml  ubuntu.yaml  ubuntu14.yaml  ubuntu16.yaml
hiera/: master.yaml  neut_gre.generate_vms.yaml  neut_tun.ceph.murano.sahara.ceil-ceph-osd.yaml  neut_tun.ceph.murano.sahara.ceil-compute.yaml  neut_tun.ceph.murano.sahara.ceil-controller.yaml  neut_tun.ceph.murano.sahara.ceil-mongo.yaml  neut_tun.ceph.murano.sahara.ceil-primary-controller.yaml  neut_tun.ceph.murano.sahara.ceil-primary-mongo.yaml  neut_tun.ironic-ironic.yaml  neut_tun.ironic-primary-controller.yaml  neut_tun.l3ha-primary-controller.yaml  neut_tun.l3ha.nova_quota-primary-controller.yaml  neut_tun.l3ha.vms_conf-virt.yaml  neut_tun.multirack.murano.sahara.ceil.ceph.public_ssl-ceph-osd.yaml  neut_tun.multirack.murano.sahara.ceil.ceph.public_ssl-compute.yaml  neut_tun.multirack.murano.sahara.ceil.ceph.public_ssl-primary-controller.yaml  neut_tun.multirack.murano.sahara.ceil.ceph.public_ssl-primary-mongo.yaml  neut_tun.murano.sahara.ceil.public_ssl-ceph-osd.yaml  neut_tun.murano.sahara.ceil.public_ssl-compute.yaml  neut_tun.vms_conf-virt.yaml  (+52 more)
(+1148 files in other folders)
