[metadata]
name = fuel-noop-fixtures
version = 0.9.2
author = Mirantis Inc.
author-email = product@mirantis.com
summary = Integration Puppet Noop testing framework
description-file = README.md
license = Apache-2
home-page = http://mirantis.com
classifier =
     Development Status :: 4 - Beta
     License :: OSI Approved :: Apache Software License
     Programming Language :: Python
     Programming Language :: Python :: 2.7
     Programming Language :: Ruby
     Programming Language :: Ruby :: 1.9.3
     Programming Language :: Puppet
     Programming Language :: Puppet :: 3.8.5
     Topic :: System :: Software Distribution
keywords =
    deployment

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc
